// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Language Tour — Higher-Kinded Polymorphism > fmap with implicit resolution 1`] = `
[
  {
    "kind": "foreign",
    "name": "stringify",
  },
  {
    "codegenJS": "function main() {
  return v0;
}
return main();
",
    "elaborated": "List",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"List"}
[3] mu {"variable":"x","source":"List","level":1}
  :annotation -> [4]
  :body -> [7]
[4] pi {"variable":"t2","icit":"Explicit","level":1}
  :annotation -> [5]
  :body -> [6]
[5] lit {"value":{"type":"Atom","value":"Type"}}
[6] lit {"value":{"type":"Atom","value":"Type"}}
[7] lambda {"variable":"a","icit":"Explicit","level":2}
  :annotation -> [8]
  :body -> [9]
  :env -> [24]
[8] lit {"value":{"type":"Atom","value":"Type"}}
[9] app {"icit":"Explicit"}
  :arg -> [11]
  :func -> [10]
[10] lit {"value":{"type":"Atom","value":"Variant"}}
[11] row:ext {"label":"cons"}
  :rest -> [21]
  :value -> [12]
[12] app {"icit":"Explicit"}
  :arg -> [14]
  :func -> [13]
[13] lit {"value":{"type":"Atom","value":"Schema"}}
[14] row:ext {"label":"1"}
  :rest -> [18]
  :value -> [15]
[15] app {"icit":"Explicit"}
  :arg -> [17]
  :func -> [16]
[16] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[17] var:bound {"index":0}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[18] row:ext {"label":"0"}
  :rest -> [20]
  :value -> [19]
[19] var:bound {"index":0}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[20] row:empty
[21] row:ext {"label":"nil"}
  :rest -> [23]
  :value -> [22]
[22] lit {"value":{"type":"Atom","value":"Unit"}}
[23] row:empty
[24] env
  :capture -> [3] {"index":0}
[25] closure
  :body -> [7]
  :env -> [24]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      return v0",
    "name": "List",
    "normalized": "List",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(t2: Type) -> Type",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const env_cls2 = {};
  const fnref_cls2 = closure_45;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_45(env0, f1) {
  const v0 = {};
  return v0;
}
return main();
",
    "elaborated": "λ(f: Π(t4: Type) -> Type) ->
  Σ($sig: [ map: Π(a: Type) =>
      Π(b: Type) => Π(t5: Π(t6: a) -> b) -> Π(t7: f a) -> f b ]) .
    Schema
      [ map: Π(a: Type) =>
          Π(b: Type) => Π(t5: Π(t6: a) -> b) -> Π(t7: f a) -> f b ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Functor"}
[3] lambda {"variable":"f","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [7]
  :env -> [44]
[4] pi {"variable":"t4","icit":"Explicit","level":1}
  :annotation -> [5]
  :body -> [6]
[5] lit {"value":{"type":"Atom","value":"Type"}}
[6] lit {"value":{"type":"Atom","value":"Type"}}
[7] sigma {"variable":"$sig","level":2}
  :annotation -> [8]
  :body -> [25]
[8] row:ext {"label":"map"}
  :rest -> [24]
  :value -> [9]
[9] pi {"variable":"a","icit":"Implicit","level":2}
  :annotation -> [10]
  :body -> [11]
[10] lit {"value":{"type":"Atom","value":"Type"}}
[11] pi {"variable":"b","icit":"Implicit","level":3}
  :annotation -> [12]
  :body -> [13]
[12] lit {"value":{"type":"Atom","value":"Type"}}
[13] pi {"variable":"t5","icit":"Explicit","level":4}
  :annotation -> [14]
  :body -> [17]
[14] pi {"variable":"t6","icit":"Explicit","level":4}
  :annotation -> [15]
  :body -> [16]
[15] var:bound {"index":1}
  :refers_to -> [9]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [9] {"level":2}
  :scope -> [11] {"level":3}
[16] var:bound {"index":1}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [9] {"level":2}
  :scope -> [11] {"level":3}
  :scope -> [14] {"level":4}
[17] pi {"variable":"t7","icit":"Explicit","level":5}
  :annotation -> [18]
  :body -> [21]
[18] app {"icit":"Explicit"}
  :arg -> [20]
  :func -> [19]
[19] var:bound {"index":3}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [9] {"level":2}
  :scope -> [11] {"level":3}
  :scope -> [13] {"level":4}
[20] var:bound {"index":2}
  :refers_to -> [9]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [9] {"level":2}
  :scope -> [11] {"level":3}
  :scope -> [13] {"level":4}
[21] app {"icit":"Explicit"}
  :arg -> [23]
  :func -> [22]
[22] var:bound {"index":4}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [9] {"level":2}
  :scope -> [11] {"level":3}
  :scope -> [13] {"level":4}
  :scope -> [17] {"level":5}
[23] var:bound {"index":2}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [9] {"level":2}
  :scope -> [11] {"level":3}
  :scope -> [13] {"level":4}
  :scope -> [17] {"level":5}
[24] row:empty
[25] app {"icit":"Explicit"}
  :arg -> [27]
  :func -> [26]
[26] lit {"value":{"type":"Atom","value":"Schema"}}
[27] row:ext {"label":"map"}
  :rest -> [43]
  :value -> [28]
[28] pi {"variable":"a","icit":"Implicit","level":3}
  :annotation -> [29]
  :body -> [30]
[29] lit {"value":{"type":"Atom","value":"Type"}}
[30] pi {"variable":"b","icit":"Implicit","level":4}
  :annotation -> [31]
  :body -> [32]
[31] lit {"value":{"type":"Atom","value":"Type"}}
[32] pi {"variable":"t5","icit":"Explicit","level":5}
  :annotation -> [33]
  :body -> [36]
[33] pi {"variable":"t6","icit":"Explicit","level":5}
  :annotation -> [34]
  :body -> [35]
[34] var:bound {"index":1}
  :refers_to -> [28]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [28] {"level":3}
  :scope -> [30] {"level":4}
[35] var:bound {"index":1}
  :refers_to -> [30]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [28] {"level":3}
  :scope -> [30] {"level":4}
  :scope -> [33] {"level":5}
[36] pi {"variable":"t7","icit":"Explicit","level":6}
  :annotation -> [37]
  :body -> [40]
[37] app {"icit":"Explicit"}
  :arg -> [39]
  :func -> [38]
[38] var:bound {"index":3}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [28] {"level":3}
  :scope -> [30] {"level":4}
  :scope -> [32] {"level":5}
[39] var:bound {"index":2}
  :refers_to -> [28]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [28] {"level":3}
  :scope -> [30] {"level":4}
  :scope -> [32] {"level":5}
[40] app {"icit":"Explicit"}
  :arg -> [42]
  :func -> [41]
[41] var:bound {"index":4}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [28] {"level":3}
  :scope -> [30] {"level":4}
  :scope -> [32] {"level":5}
  :scope -> [36] {"level":6}
[42] var:bound {"index":2}
  :refers_to -> [30]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [28] {"level":3}
  :scope -> [30] {"level":4}
  :scope -> [32] {"level":5}
  :scope -> [36] {"level":6}
[43] row:empty
[44] env
[45] closure
  :body -> [3]
  :env -> [44]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_45
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_45(env0, f1) entry=entry
    entry:
      let v0 = alloc {  }
      return v0",
    "name": "Functor",
    "normalized": "λ(f: Π(t4: Type) -> (closure: Type -| Γ: t4)) ->
  (closure: Σ($sig: [ map: Π(a: Type) =>
      Π(b: Type) => Π(t5: Π(t6: a) -> b) -> Π(t7: f a) -> f b ]) .
    Schema
      [ map: Π(a: Type) =>
          Π(b: Type) => Π(t5: Π(t6: a) -> b) -> Π(t7: f a) -> f b ] -| Γ: f)",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(t3: Π(t4: Type) -> Type) -> Type",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const env_cls2 = {
    v0: mapList
  };
  const fnref_cls2 = closure_79;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_82(env0, list1) {
  let __block = "entry";
  while (true) {
    switch (__block) {
      case "entry": {
        const cap_0 = env0.v0;
        const cap_1 = env0.v1;
        const cap_2 = env0.v2;
        const cap_3 = env0.v3;
        (__block = "sw2");
        break;
      }
      case "sw2": {
        const tag0 = list1.__tag;
        if ((String(tag0) === "nil")) {
          (__block = "case4");
          break;
        }
        if ((String(tag0) === "cons")) {
          (__block = "case5");
          break;
        }
      }
      case "case4": {
        const v5 = "nil";
        const v6 = null;
        const v7 = {
          __tag: v5,
          payload: v6
        };
        const match1 = v7;
        (__block = "join3");
        break;
      }
      case "case5": {
        const v6 = list1.payload;
        const v7 = v6 .0;
        const x = v7;
        const v8 = v6 .1;
        const xs = v8;
        const v9 = "cons";
        const fnref10 = cap_0.__fn;
        const env11 = cap_0.__env;
        const v12 = fnref10(env11, x);
        const fnref13 = cap_1.__fn;
        const env14 = cap_1.__env;
        const v15 = fnref13(env14, cap_2);
        const fnref16 = v15.__fn;
        const env17 = v15.__env;
        const v18 = fnref16(env17, cap_3);
        const fnref19 = v18.__fn;
        const env20 = v18.__env;
        const v21 = fnref19(env20, cap_0);
        const fnref22 = v21.__fn;
        const env23 = v21.__env;
        const v24 = fnref22(env23, xs);
        const v25 = {
          0: v12,
          1: v24
        };
        const v26 = {
          __tag: v9,
          payload: v25
        };
        const match1 = v26;
        (__block = "join3");
        break;
      }
      case "join3": {
        return match1;
      }
    }
  }
}

function closure_81(env0, f1) {
  const cap_0 = env0.v0;
  const cap_1 = env0.v1;
  const cap_2 = env0.v2;
  const env_cls2 = {
    v0: f1,
    v1: cap_1,
    v2: cap_0,
    v3: cap_2
  };
  const fnref_cls2 = closure_82;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_80(env0, b1) {
  const cap_0 = env0.v0;
  const cap_1 = env0.v1;
  const env_cls2 = {
    v0: cap_0,
    v1: cap_1,
    v2: b1
  };
  const fnref_cls2 = closure_81;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_79(env0, a1) {
  const cap_0 = env0.v0;
  const env_cls2 = {
    v0: a1,
    v1: cap_0
  };
  const fnref_cls2 = closure_80;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}
return main();
",
    "elaborated": "λ(a: Type) =>
  λ(b: Type) =>
    λ(f: Π(t9: a) -> b) ->
      λ(list: (List) a) ->
        match list
          | Variant [ nil: _ | $row_8 ] -> Struct [ __tag: nil, payload: unit ]
          | Variant [ cons: Struct [ 0: x, 1: xs | $row_14 ] | $row_15 ] ->
              Struct
                [ __tag: cons, payload: Struct [ 0: f x, 1: I8 @a @b f xs ] ]",
    "error": "Cannot read properties of undefined (reading 'type'); Cannot read properties of undefined (reading 'type'); Cannot read properties of undefined (reading 'type')",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"mapList"}
[3] lambda {"variable":"a","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [74]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] lambda {"variable":"b","icit":"Implicit","level":2}
  :annotation -> [6]
  :body -> [7]
  :env -> [75]
[6] lit {"value":{"type":"Atom","value":"Type"}}
[7] lambda {"variable":"f","icit":"Explicit","level":3}
  :annotation -> [8]
  :body -> [11]
  :env -> [76]
[8] pi {"variable":"t9","icit":"Explicit","level":3}
  :annotation -> [9]
  :body -> [10]
[9] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[10] var:bound {"index":1}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [8] {"level":3}
[11] lambda {"variable":"list","icit":"Explicit","level":4}
  :annotation -> [12]
  :body -> [35]
  :env -> [77]
[12] app {"icit":"Explicit"}
  :arg -> [34]
  :func -> [13]
[13] mu {"variable":"x","source":"List","level":4}
  :annotation -> [14]
  :body -> [17]
[14] pi {"variable":"t2","icit":"Explicit","level":4}
  :annotation -> [15]
  :body -> [16]
[15] lit {"value":{"type":"Atom","value":"Type"}}
[16] lit {"value":{"type":"Atom","value":"Type"}}
[17] lambda {"variable":"a","icit":"Explicit","level":5}
  :annotation -> [18]
  :body -> [19]
  :env -> [78]
[18] lit {"value":{"type":"Atom","value":"Type"}}
[19] app {"icit":"Explicit"}
  :arg -> [21]
  :func -> [20]
[20] lit {"value":{"type":"Atom","value":"Variant"}}
[21] row:ext {"label":"cons"}
  :rest -> [31]
  :value -> [22]
[22] app {"icit":"Explicit"}
  :arg -> [24]
  :func -> [23]
[23] lit {"value":{"type":"Atom","value":"Schema"}}
[24] row:ext {"label":"1"}
  :rest -> [28]
  :value -> [25]
[25] app {"icit":"Explicit"}
  :arg -> [27]
  :func -> [26]
[26] var:bound {"index":1}
  :refers_to -> [13]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [13] {"level":4}
  :scope -> [17] {"level":5}
[27] var:bound {"index":0}
  :refers_to -> [17]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [13] {"level":4}
  :scope -> [17] {"level":5}
[28] row:ext {"label":"0"}
  :rest -> [30]
  :value -> [29]
[29] var:bound {"index":0}
  :refers_to -> [17]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [13] {"level":4}
  :scope -> [17] {"level":5}
[30] row:empty
[31] row:ext {"label":"nil"}
  :rest -> [33]
  :value -> [32]
[32] lit {"value":{"type":"Atom","value":"Unit"}}
[33] row:empty
[34] var:bound {"index":2}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
[35] match
  :alt -> [37] {"index":0}
  :alt -> [44] {"index":1}
  :decision_tree -> [66]
  :scrutinee -> [36]
[36] var:bound {"index":0}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [11] {"level":4}
[37] case
  :body -> [41]
  :next -> [44]
  :pattern -> [38]
[38] pat:variant {"label":"nil"}
  :payload -> [39]
[39] pat:wildcard
[40] pat:wildcard
[41] struct
  :field -> [42] {"label":"__tag"}
  :field -> [43] {"label":"payload"}
[42] lit {"value":{"type":"Atom","value":"nil"}}
[43] lit {"value":{"type":"unit"}}
[44] case
  :body -> [51]
  :pattern -> [45]
[45] pat:variant {"label":"cons"}
  :payload -> [46]
[46] pat:struct
  :field -> [47] {"label":"0"}
  :field -> [48] {"label":"1"}
[47] pat:binder {"name":"x","level":5}
[48] pat:binder {"name":"xs","level":6}
[49] pat:wildcard
[50] pat:wildcard
[51] struct
  :field -> [52] {"label":"__tag"}
  :field -> [53] {"label":"payload"}
[52] lit {"value":{"type":"Atom","value":"cons"}}
[53] struct
  :field -> [54] {"label":"0"}
  :field -> [57] {"label":"1"}
[54] app {"icit":"Explicit"}
  :arg -> [56]
  :func -> [55]
[55] var:bound {"index":5}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [11] {"level":4}
  :scope -> [47] {"level":5}
  :scope -> [48] {"level":6}
  :scope -> [49] {"level":7}
  :scope -> [50] {"level":8}
[56] var:bound {"index":3}
  :refers_to -> [47]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [11] {"level":4}
  :scope -> [47] {"level":5}
  :scope -> [48] {"level":6}
  :scope -> [49] {"level":7}
  :scope -> [50] {"level":8}
[57] app {"icit":"Explicit"}
  :arg -> [65]
  :func -> [58]
[58] app {"icit":"Explicit"}
  :arg -> [64]
  :func -> [59]
[59] app {"icit":"Implicit"}
  :arg -> [63]
  :func -> [60]
[60] app {"icit":"Implicit"}
  :arg -> [62]
  :func -> [61]
[61] var:bound {"index":8}
  :refers_to -> [2]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [11] {"level":4}
  :scope -> [47] {"level":5}
  :scope -> [48] {"level":6}
  :scope -> [49] {"level":7}
  :scope -> [50] {"level":8}
[62] var:bound {"index":7}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [11] {"level":4}
  :scope -> [47] {"level":5}
  :scope -> [48] {"level":6}
  :scope -> [49] {"level":7}
  :scope -> [50] {"level":8}
[63] var:bound {"index":6}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [11] {"level":4}
  :scope -> [47] {"level":5}
  :scope -> [48] {"level":6}
  :scope -> [49] {"level":7}
  :scope -> [50] {"level":8}
[64] var:bound {"index":5}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [11] {"level":4}
  :scope -> [47] {"level":5}
  :scope -> [48] {"level":6}
  :scope -> [49] {"level":7}
  :scope -> [50] {"level":8}
[65] var:bound {"index":2}
  :refers_to -> [48]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [11] {"level":4}
  :scope -> [47] {"level":5}
  :scope -> [48] {"level":6}
  :scope -> [49] {"level":7}
  :scope -> [50] {"level":8}
[66] switch {"kind":"tag"}
  :branch -> [68] {"label":"nil"}
  :branch -> [70] {"label":"cons"}
  :inspect -> [36]
[67] proj {"label":"payload"}
  :target -> [36]
[68] leaf
  :body -> [41]
[69] proj {"label":"payload"}
  :target -> [36]
[70] switch {"kind":"struct"}
  :branch -> [73]
  :inspect -> [69]
[71] proj {"label":"0"}
  :target -> [69]
[72] proj {"label":"1"}
  :target -> [69]
[73] leaf
  :bind -> [71] {"name":"x","binder":47}
  :bind -> [72] {"name":"xs","binder":48}
  :body -> [51]
[74] env
  :capture -> [2] {"index":0}
[75] env
  :capture -> [3] {"index":0}
  :capture -> [2] {"index":1}
[76] env
  :capture -> [3] {"index":0}
  :capture -> [2] {"index":1}
  :capture -> [5] {"index":2}
[77] env
  :capture -> [7] {"index":0}
  :capture -> [2] {"index":1}
  :capture -> [3] {"index":2}
  :capture -> [5] {"index":3}
[78] env
  :capture -> [13] {"index":0}
[79] closure
  :body -> [3]
  :env -> [74]
[80] closure
  :body -> [5]
  :env -> [75]
[81] closure
  :body -> [7]
  :env -> [76]
[82] closure
  :body -> [11]
  :env -> [77]
[83] closure
  :body -> [17]
  :env -> [78]",
    "ivl": "",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc { v0: mapList }
      let fnref_cls2 = &closure_79
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_82(env0, list1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let cap_1 = read env0.v1
      let cap_2 = read env0.v2
      let cap_3 = read env0.v3
      jump sw2
    sw2:
      let tag0 = read list1.__tag
      branch tag0 { nil -> case4 | cons -> case5 }
    case4:
      let v5 = nil
      let v6 = unit
      let v7 = alloc { __tag: v5, payload: v6 }
      let match1 = v7
      jump join3
    case5:
      let v6 = read list1.payload
      let v7 = read v6.0
      let x = v7
      let v8 = read v6.1
      let xs = v8
      let v9 = cons
      let fnref10 = read cap_0.__fn
      let env11 = read cap_0.__env
      let v12 = call *fnref10(env11, x)
      let fnref13 = read cap_1.__fn
      let env14 = read cap_1.__env
      let v15 = call *fnref13(env14, cap_2)
      let fnref16 = read v15.__fn
      let env17 = read v15.__env
      let v18 = call *fnref16(env17, cap_3)
      let fnref19 = read v18.__fn
      let env20 = read v18.__env
      let v21 = call *fnref19(env20, cap_0)
      let fnref22 = read v21.__fn
      let env23 = read v21.__env
      let v24 = call *fnref22(env23, xs)
      let v25 = alloc { 0: v12, 1: v24 }
      let v26 = alloc { __tag: v9, payload: v25 }
      let match1 = v26
      jump join3
    join3:
      return match1
  fn closure_81(env0, f1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let cap_1 = read env0.v1
      let cap_2 = read env0.v2
      let env_cls2 = alloc { v0: f1, v1: cap_1, v2: cap_0, v3: cap_2 }
      let fnref_cls2 = &closure_82
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_80(env0, b1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let cap_1 = read env0.v1
      let env_cls2 = alloc { v0: cap_0, v1: cap_1, v2: b1 }
      let fnref_cls2 = &closure_81
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_79(env0, a1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let env_cls2 = alloc { v0: a1, v1: cap_0 }
      let fnref_cls2 = &closure_80
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2",
    "name": "mapList",
    "normalized": "λ(a: Type) =>
  (closure: λ(b: Type) =>
    λ(f: Π(t9: a) -> b) ->
      λ(list: (List) a) ->
        match list
          | Variant [ nil: _ | $row_8 ] -> Struct [ __tag: nil, payload: unit ]
          | Variant [ cons: Struct [ 0: x, 1: xs | $row_14 ] | $row_15 ] ->
              Struct
                [ __tag: cons,
                  payload: Struct [ 0: f x, 1: I8 @a @b f xs ] ] -| Γ: a)",
    "solverTrace": "",
    "type": "Π(a: Type) => Π(b: Type) => Π(t8: Π(t9: a) -> b) -> Π(t10: (List) a) -> (List) b",
    "validity": "",
  },
  {
    "codegenJS": "function main() {
  const v0 = mapList;
  const v1 = {
    map: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ map: λ(a: Type) => λ(b: Type) => mapList @a @b ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"ListFunctor"}
[3] struct
  :field -> [11] {"label":"map"}
[5] lit {"value":{"type":"Atom","value":"Type"}}
[7] lit {"value":{"type":"Atom","value":"Type"}}
[10] var:free {"name":"mapList"}
[11] var:ref {"name":"mapList"}
  :refers_to -> [10]
  :scope -> [2] {"level":0}
  :scope -> [11] {"level":1}",
    "ivl": "(forall ((a Type)) (forall ((b Type)) (and (= a a) (= b b))))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = mapList
      let v1 = alloc { map: v0 }
      return v1",
    "name": "ListFunctor",
    "normalized": "Struct [ map: λ(a: Type) => (closure: λ(b: Type) => mapList @a @b -| Γ: a) ]",
    "solverTrace": "=== Formula ===
  (forall ((a Type)) (forall ((b Type)) (and (= a a) (= b b))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  a=a -> residual
  a=b -> residual
  b=a -> residual
  b=b -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Σ($sig: [ map: Π(a: Type) =>
    Π(b: Type) => Π(t5: Π(t6: a) -> b) -> Π(t7: (List) a) -> (List) b ]) .
  Schema
    [ map: Π(a: Type) =>
        Π(b: Type) => Π(t5: Π(t6: a) -> b) -> Π(t7: (List) a) -> (List) b ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const env_cls2 = {
    v0: cap0
  };
  const fnref_cls2 = closure_70;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_72(env0, a1) {
  const cap_0 = env0.v0;
  const cap_1 = env0.v1;
  const cap_2 = env0.v2;
  return cap_0;
}

function closure_71(env0, functor1) {
  const cap_0 = env0.v0;
  const cap_1 = env0.v1;
  const env_cls2 = {
    v0: cap_0,
    v1: cap_1,
    v2: functor1
  };
  const fnref_cls2 = closure_72;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_70(env0, f1) {
  const cap_0 = env0.v0;
  const env_cls2 = {
    v0: cap_0,
    v1: f1
  };
  const fnref_cls2 = closure_71;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}
return main();
",
    "elaborated": "λ(f: Π(t12: Type) -> Type) =>
  λ(functor: Σ($sig: [ map: Π(a: Type) =>
      Π(b: Type) => Π(t5: Π(t6: a) -> b) -> Π(t7: f a) -> f b ]) .
    Schema
      [ map: Π(a: Type) =>
          Π(b: Type) => Π(t5: Π(t6: a) -> b) -> Π(t7: f a) -> f b ]) =>
    λ(a: Type) =>
      λ(b: Type) =>
        λ(fn: Π(t14: a) -> b) ->
          λ(container: f a) -> ((functor).map) @a @b fn container",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"fmap"}
[3] lambda {"variable":"f","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [7]
  :env -> [67]
[4] pi {"variable":"t12","icit":"Explicit","level":1}
  :annotation -> [5]
  :body -> [6]
[5] lit {"value":{"type":"Atom","value":"Type"}}
[6] lit {"value":{"type":"Atom","value":"Type"}}
[7] lambda {"variable":"functor","icit":"Implicit","level":2}
  :annotation -> [8]
  :body -> [45]
  :env -> [68]
[8] sigma {"variable":"$sig","level":2}
  :annotation -> [9]
  :body -> [26]
[9] row:ext {"label":"map"}
  :rest -> [25]
  :value -> [10]
[10] pi {"variable":"a","icit":"Implicit","level":2}
  :annotation -> [11]
  :body -> [12]
[11] lit {"value":{"type":"Atom","value":"Type"}}
[12] pi {"variable":"b","icit":"Implicit","level":3}
  :annotation -> [13]
  :body -> [14]
[13] lit {"value":{"type":"Atom","value":"Type"}}
[14] pi {"variable":"t5","icit":"Explicit","level":4}
  :annotation -> [15]
  :body -> [18]
[15] pi {"variable":"t6","icit":"Explicit","level":4}
  :annotation -> [16]
  :body -> [17]
[16] var:bound {"index":1}
  :refers_to -> [10]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [10] {"level":2}
  :scope -> [12] {"level":3}
[17] var:bound {"index":1}
  :refers_to -> [12]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [10] {"level":2}
  :scope -> [12] {"level":3}
  :scope -> [15] {"level":4}
[18] pi {"variable":"t7","icit":"Explicit","level":5}
  :annotation -> [19]
  :body -> [22]
[19] app {"icit":"Explicit"}
  :arg -> [21]
  :func -> [20]
[20] var:bound {"index":3}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [10] {"level":2}
  :scope -> [12] {"level":3}
  :scope -> [14] {"level":4}
[21] var:bound {"index":2}
  :refers_to -> [10]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [10] {"level":2}
  :scope -> [12] {"level":3}
  :scope -> [14] {"level":4}
[22] app {"icit":"Explicit"}
  :arg -> [24]
  :func -> [23]
[23] var:bound {"index":4}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [10] {"level":2}
  :scope -> [12] {"level":3}
  :scope -> [14] {"level":4}
  :scope -> [18] {"level":5}
[24] var:bound {"index":2}
  :refers_to -> [12]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [10] {"level":2}
  :scope -> [12] {"level":3}
  :scope -> [14] {"level":4}
  :scope -> [18] {"level":5}
[25] row:empty
[26] app {"icit":"Explicit"}
  :arg -> [28]
  :func -> [27]
[27] lit {"value":{"type":"Atom","value":"Schema"}}
[28] row:ext {"label":"map"}
  :rest -> [44]
  :value -> [29]
[29] pi {"variable":"a","icit":"Implicit","level":3}
  :annotation -> [30]
  :body -> [31]
[30] lit {"value":{"type":"Atom","value":"Type"}}
[31] pi {"variable":"b","icit":"Implicit","level":4}
  :annotation -> [32]
  :body -> [33]
[32] lit {"value":{"type":"Atom","value":"Type"}}
[33] pi {"variable":"t5","icit":"Explicit","level":5}
  :annotation -> [34]
  :body -> [37]
[34] pi {"variable":"t6","icit":"Explicit","level":5}
  :annotation -> [35]
  :body -> [36]
[35] var:bound {"index":1}
  :refers_to -> [29]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [8] {"level":2}
  :scope -> [29] {"level":3}
  :scope -> [31] {"level":4}
[36] var:bound {"index":1}
  :refers_to -> [31]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [8] {"level":2}
  :scope -> [29] {"level":3}
  :scope -> [31] {"level":4}
  :scope -> [34] {"level":5}
[37] pi {"variable":"t7","icit":"Explicit","level":6}
  :annotation -> [38]
  :body -> [41]
[38] app {"icit":"Explicit"}
  :arg -> [40]
  :func -> [39]
[39] var:bound {"index":3}
  :refers_to -> [8]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [8] {"level":2}
  :scope -> [29] {"level":3}
  :scope -> [31] {"level":4}
  :scope -> [33] {"level":5}
[40] var:bound {"index":2}
  :refers_to -> [29]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [8] {"level":2}
  :scope -> [29] {"level":3}
  :scope -> [31] {"level":4}
  :scope -> [33] {"level":5}
[41] app {"icit":"Explicit"}
  :arg -> [43]
  :func -> [42]
[42] var:bound {"index":4}
  :refers_to -> [8]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [8] {"level":2}
  :scope -> [29] {"level":3}
  :scope -> [31] {"level":4}
  :scope -> [33] {"level":5}
  :scope -> [37] {"level":6}
[43] var:bound {"index":2}
  :refers_to -> [31]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [8] {"level":2}
  :scope -> [29] {"level":3}
  :scope -> [31] {"level":4}
  :scope -> [33] {"level":5}
  :scope -> [37] {"level":6}
[44] row:empty
[45] lambda {"variable":"a","icit":"Implicit","level":3}
  :annotation -> [46]
  :body -> [60]
  :env -> [69]
[46] lit {"value":{"type":"Atom","value":"Type"}}
[48] lit {"value":{"type":"Atom","value":"Type"}}
[50] pi {"variable":"t14","icit":"Explicit","level":5}
  :annotation -> [51]
  :body -> [52]
[51] var:bound {"index":0}
  :refers_to -> [45]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [45] {"level":3}
[52] var:bound {"index":0}
  :refers_to -> [60]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [45] {"level":3}
  :scope -> [50] {"level":5}
[54] app {"icit":"Explicit"}
  :arg -> [56]
  :func -> [55]
[55] var:bound {"index":2}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [45] {"level":3}
[56] var:bound {"index":0}
  :refers_to -> [45]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [45] {"level":3}
[60] app {"icit":"Implicit"}
  :arg -> [63]
  :func -> [61]
[61] proj {"label":"map"}
  :target -> [62]
[62] var:bound {"index":1}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [45] {"level":3}
[63] var:bound {"index":0}
  :refers_to -> [45]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [45] {"level":3}
[67] env
  :capture -> [60] {"index":0}
[68] env
  :capture -> [60] {"index":0}
  :capture -> [3] {"index":1}
[69] env
  :capture -> [60] {"index":0}
  :capture -> [3] {"index":1}
  :capture -> [7] {"index":2}
[70] closure
  :body -> [3]
  :env -> [67]
[71] closure
  :body -> [7]
  :env -> [68]
[72] closure
  :body -> [45]
  :env -> [69]",
    "ivl": "(forall ((a Type))
  (forall ((b Type))
    (forall ((container App_Fn_Type_Type_Type))
      (and (= a a) (= b b) (= container container)))))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc { v0: cap0 }
      let fnref_cls2 = &closure_70
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_72(env0, a1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let cap_1 = read env0.v1
      let cap_2 = read env0.v2
      return cap_0
  fn closure_71(env0, functor1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let cap_1 = read env0.v1
      let env_cls2 = alloc { v0: cap_0, v1: cap_1, v2: functor1 }
      let fnref_cls2 = &closure_72
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_70(env0, f1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let env_cls2 = alloc { v0: cap_0, v1: f1 }
      let fnref_cls2 = &closure_71
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2",
    "name": "fmap",
    "normalized": "λ(f: Π(t12: Type) -> (closure: Type -| Γ: t12)) =>
  (closure: λ(functor: Σ($sig: [ map: Π(a: Type) =>
      Π(b: Type) => Π(t5: Π(t6: a) -> b) -> Π(t7: f a) -> f b ]) .
    Schema
      [ map: Π(a: Type) =>
          Π(b: Type) => Π(t5: Π(t6: a) -> b) -> Π(t7: f a) -> f b ]) =>
    λ(a: Type) =>
      λ(b: Type) =>
        λ(fn: Π(t14: a) -> b) ->
          λ(container: f a) -> ((functor).map) @a @b fn container -| Γ: f)",
    "solverTrace": "=== Formula ===
  (forall ((a Type))
    (forall ((b Type))
      (forall ((container App_Fn_Type_Type_Type))
        (and (= a a) (= b b) (= container container)))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  a=a -> residual
  a=b -> residual
  b=a -> residual
  b=b -> residual
  container=container -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(f: Π(t12: Type) -> Type) =>
  Π(functor: Σ($sig: [ map: Π(a: Type) =>
      Π(b: Type) => Π(t5: Π(t6: a) -> b) -> Π(t7: f a) -> f b ]) .
    Schema
      [ map: Π(a: Type) =>
          Π(b: Type) => Π(t5: Π(t6: a) -> b) -> Π(t7: f a) -> f b ]) =>
    Π(a: Type) => Π(b: Type) => Π(t13: Π(t14: a) -> b) -> Π(t15: f a) -> f b",
    "validity": "valid",
  },
  {
    "kind": "using",
    "name": "(using)",
  },
  {
    "codegenJS": "function main() {
  const env_cls2 = {
    v0: fmap
  };
  const fnref_cls2 = closure_67;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function pap_fn13(env14, arg15) {
  const cap_0 = env14.v0;
  const result_pap_fn13 = stringify(cap_0, arg15);
  return result_pap_fn13;
}

function closure_69(env0, A1) {
  const cap_0 = env0.v0;
  const cap_1 = env0.v1;
  const cap_2 = env0.v2;
  const fnref0 = cap_0.__fn;
  const env1 = cap_0.__env;
  const v2 = fnref0(env1, cap_1);
  const fnref3 = v2.__fn;
  const env4 = v2.__env;
  const v5 = fnref3(env4, A1);
  const fnref6 = v5.__fn;
  const env7 = v5.__env;
  const v8 = fnref6(env7, cap_2);
  const v9 = "String";
  const fnref10 = v8.__fn;
  const env11 = v8.__env;
  const v12 = fnref10(env11, v9);
  const env_cls13 = {
    v0: cap_2
  };
  const fnref_cls13 = pap_fn13;
  const closure_cls13 = {
    __fn: fnref_cls13,
    __env: env_cls13
  };
  const fnref14 = v12.__fn;
  const env15 = v12.__env;
  const v16 = fnref14(env15, closure_cls13);
  return v16;
}

function closure_68(env0, a1) {
  const cap_0 = env0.v0;
  const cap_1 = env0.v1;
  const env_cls2 = {
    v0: cap_1,
    v1: cap_0,
    v2: a1
  };
  const fnref_cls2 = closure_69;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_67(env0, F1) {
  const cap_0 = env0.v0;
  const env_cls2 = {
    v0: F1,
    v1: cap_0
  };
  const fnref_cls2 = closure_68;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}
return main();
",
    "elaborated": "λ(F: Π(t12: Type) -> Type) =>
  λ(a: Type) =>
    λ(A: Σ($sig: [ map: Π(a: Type) =>
        Π(b: Type) => Π(t5: Π(t6: a) -> b) -> Π(t7: F a) -> F b ]) .
      Schema
        [ map: Π(a: Type) =>
            Π(b: Type) => Π(t5: Π(t6: a) -> b) -> Π(t7: F a) -> F b ]) =>
      fmap @F @A @a @String (FFI.stringify @a)",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"strmap"}
[3] lambda {"variable":"F","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [7]
  :env -> [64]
[4] pi {"variable":"t12","icit":"Explicit","level":1}
  :annotation -> [5]
  :body -> [6]
[5] lit {"value":{"type":"Atom","value":"Type"}}
[6] lit {"value":{"type":"Atom","value":"Type"}}
[7] lambda {"variable":"a","icit":"Implicit","level":2}
  :annotation -> [8]
  :body -> [9]
  :env -> [65]
[8] lit {"value":{"type":"Atom","value":"Type"}}
[9] lambda {"variable":"A","icit":"Implicit","level":3}
  :annotation -> [10]
  :body -> [47]
  :env -> [66]
[10] sigma {"variable":"$sig","level":3}
  :annotation -> [11]
  :body -> [28]
[11] row:ext {"label":"map"}
  :rest -> [27]
  :value -> [12]
[12] pi {"variable":"a","icit":"Implicit","level":3}
  :annotation -> [13]
  :body -> [14]
[13] lit {"value":{"type":"Atom","value":"Type"}}
[14] pi {"variable":"b","icit":"Implicit","level":4}
  :annotation -> [15]
  :body -> [16]
[15] lit {"value":{"type":"Atom","value":"Type"}}
[16] pi {"variable":"t5","icit":"Explicit","level":5}
  :annotation -> [17]
  :body -> [20]
[17] pi {"variable":"t6","icit":"Explicit","level":5}
  :annotation -> [18]
  :body -> [19]
[18] var:bound {"index":1}
  :refers_to -> [12]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [12] {"level":3}
  :scope -> [14] {"level":4}
[19] var:bound {"index":1}
  :refers_to -> [14]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [12] {"level":3}
  :scope -> [14] {"level":4}
  :scope -> [17] {"level":5}
[20] pi {"variable":"t7","icit":"Explicit","level":6}
  :annotation -> [21]
  :body -> [24]
[21] app {"icit":"Explicit"}
  :arg -> [23]
  :func -> [22]
[22] var:bound {"index":4}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [12] {"level":3}
  :scope -> [14] {"level":4}
  :scope -> [16] {"level":5}
[23] var:bound {"index":2}
  :refers_to -> [12]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [12] {"level":3}
  :scope -> [14] {"level":4}
  :scope -> [16] {"level":5}
[24] app {"icit":"Explicit"}
  :arg -> [26]
  :func -> [25]
[25] var:bound {"index":5}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [12] {"level":3}
  :scope -> [14] {"level":4}
  :scope -> [16] {"level":5}
  :scope -> [20] {"level":6}
[26] var:bound {"index":2}
  :refers_to -> [14]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [12] {"level":3}
  :scope -> [14] {"level":4}
  :scope -> [16] {"level":5}
  :scope -> [20] {"level":6}
[27] row:empty
[28] app {"icit":"Explicit"}
  :arg -> [30]
  :func -> [29]
[29] lit {"value":{"type":"Atom","value":"Schema"}}
[30] row:ext {"label":"map"}
  :rest -> [46]
  :value -> [31]
[31] pi {"variable":"a","icit":"Implicit","level":4}
  :annotation -> [32]
  :body -> [33]
[32] lit {"value":{"type":"Atom","value":"Type"}}
[33] pi {"variable":"b","icit":"Implicit","level":5}
  :annotation -> [34]
  :body -> [35]
[34] lit {"value":{"type":"Atom","value":"Type"}}
[35] pi {"variable":"t5","icit":"Explicit","level":6}
  :annotation -> [36]
  :body -> [39]
[36] pi {"variable":"t6","icit":"Explicit","level":6}
  :annotation -> [37]
  :body -> [38]
[37] var:bound {"index":1}
  :refers_to -> [31]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [10] {"level":3}
  :scope -> [31] {"level":4}
  :scope -> [33] {"level":5}
[38] var:bound {"index":1}
  :refers_to -> [33]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [10] {"level":3}
  :scope -> [31] {"level":4}
  :scope -> [33] {"level":5}
  :scope -> [36] {"level":6}
[39] pi {"variable":"t7","icit":"Explicit","level":7}
  :annotation -> [40]
  :body -> [43]
[40] app {"icit":"Explicit"}
  :arg -> [42]
  :func -> [41]
[41] var:bound {"index":4}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [10] {"level":3}
  :scope -> [31] {"level":4}
  :scope -> [33] {"level":5}
  :scope -> [35] {"level":6}
[42] var:bound {"index":2}
  :refers_to -> [31]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [10] {"level":3}
  :scope -> [31] {"level":4}
  :scope -> [33] {"level":5}
  :scope -> [35] {"level":6}
[43] app {"icit":"Explicit"}
  :arg -> [45]
  :func -> [44]
[44] var:bound {"index":5}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [10] {"level":3}
  :scope -> [31] {"level":4}
  :scope -> [33] {"level":5}
  :scope -> [35] {"level":6}
  :scope -> [39] {"level":7}
[45] var:bound {"index":2}
  :refers_to -> [33]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [10] {"level":3}
  :scope -> [31] {"level":4}
  :scope -> [33] {"level":5}
  :scope -> [35] {"level":6}
  :scope -> [39] {"level":7}
[46] row:empty
[47] app {"icit":"Explicit"}
  :arg -> [62]
  :func -> [48]
[48] app {"icit":"Implicit"}
  :arg -> [57]
  :func -> [49]
[49] app {"icit":"Implicit"}
  :arg -> [56]
  :func -> [50]
[50] app {"icit":"Implicit"}
  :arg -> [55]
  :func -> [51]
[51] app {"icit":"Implicit"}
  :arg -> [54]
  :func -> [53]
[52] var:free {"name":"fmap"}
[53] var:ref {"name":"fmap"}
  :refers_to -> [52]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [9] {"level":3}
[54] var:bound {"index":2}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [9] {"level":3}
[55] var:bound {"index":0}
  :refers_to -> [9]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [9] {"level":3}
[56] var:bound {"index":1}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [9] {"level":3}
[57] lit {"value":{"type":"Atom","value":"String"}}
[59] var:foreign {"name":"stringify","arity":2}
[61] var:bound {"index":1}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [9] {"level":3}
[62] external {"name":"stringify","arity":2,"args":1,"saturated":false}
  :arg -> [61] {"index":0}
  :callee -> [59]
[63] pap {"remaining":1}
  :captured -> [61] {"index":0}
  :materializes -> [62]
[64] env
  :capture -> [52] {"index":0}
[65] env
  :capture -> [3] {"index":0}
  :capture -> [52] {"index":1}
[66] env
  :capture -> [52] {"index":0}
  :capture -> [3] {"index":1}
  :capture -> [7] {"index":2}
[67] closure
  :body -> [3]
  :env -> [64]
[68] closure
  :body -> [7]
  :env -> [65]
[69] closure
  :body -> [9]
  :env -> [66]",
    "ivl": "(forall ((a Type)) (and (= a a) (= a a)))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc { v0: fmap }
      let fnref_cls2 = &closure_67
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn pap_fn13(env14, arg15) entry=pap_fn13_entry
    pap_fn13_entry:
      let cap_0 = read env14.v0
      let result_pap_fn13 = call stringify(cap_0, arg15)
      return result_pap_fn13
  fn closure_69(env0, A1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let cap_1 = read env0.v1
      let cap_2 = read env0.v2
      let fnref0 = read cap_0.__fn
      let env1 = read cap_0.__env
      let v2 = call *fnref0(env1, cap_1)
      let fnref3 = read v2.__fn
      let env4 = read v2.__env
      let v5 = call *fnref3(env4, A1)
      let fnref6 = read v5.__fn
      let env7 = read v5.__env
      let v8 = call *fnref6(env7, cap_2)
      let v9 = String
      let fnref10 = read v8.__fn
      let env11 = read v8.__env
      let v12 = call *fnref10(env11, v9)
      let env_cls13 = alloc { v0: cap_2 }
      let fnref_cls13 = &pap_fn13
      let closure_cls13 = alloc { __fn: fnref_cls13, __env: env_cls13 }
      let fnref14 = read v12.__fn
      let env15 = read v12.__env
      let v16 = call *fnref14(env15, closure_cls13)
      return v16
  fn closure_68(env0, a1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let cap_1 = read env0.v1
      let env_cls2 = alloc { v0: cap_1, v1: cap_0, v2: a1 }
      let fnref_cls2 = &closure_69
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_67(env0, F1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let env_cls2 = alloc { v0: F1, v1: cap_0 }
      let fnref_cls2 = &closure_68
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2",
    "name": "strmap",
    "normalized": "λ(F: Π(t12: Type) -> (closure: Type -| Γ: t12)) =>
  (closure: λ(a: Type) =>
    λ(A: Σ($sig: [ map: Π(a: Type) =>
        Π(b: Type) => Π(t5: Π(t6: a) -> b) -> Π(t7: F a) -> F b ]) .
      Schema
        [ map: Π(a: Type) =>
            Π(b: Type) => Π(t5: Π(t6: a) -> b) -> Π(t7: F a) -> F b ]) =>
      fmap @F @A @a @String (FFI.stringify @a) -| Γ: F)",
    "solverTrace": "=== Formula ===
  (forall ((a Type)) (and (= a a) (= a a)))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  a=a -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(F: Π(t12: Type) -> Type) =>
  Π(a: Type) =>
    Π(A: Σ($sig: [ map: Π(a: Type) =>
        Π(b: Type) => Π(t5: Π(t6: a) -> b) -> Π(t7: F a) -> F b ]) .
      Schema
        [ map: Π(a: Type) =>
            Π(b: Type) => Π(t5: Π(t6: a) -> b) -> Π(t7: F a) -> F b ]) =>
      Π(t15: F a) -> F String",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = "cons";
  const v1 = 1;
  const v2 = "nil";
  const v3 = null;
  const v4 = {
    __tag: v2,
    payload: v3
  };
  const v5 = {
    0: v1,
    1: v4
  };
  const v6 = {
    __tag: v0,
    payload: v5
  };
  return v6;
}
return main();
",
    "elaborated": "Struct
  [ __tag: cons,
    payload: Struct [ 0: 1, 1: Struct [ __tag: nil, payload: unit ] ] ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"listOf1"}
[3] struct
  :field -> [4] {"label":"__tag"}
  :field -> [5] {"label":"payload"}
[4] lit {"value":{"type":"Atom","value":"cons"}}
[5] struct
  :field -> [6] {"label":"0"}
  :field -> [7] {"label":"1"}
[6] lit {"value":{"type":"Num","value":1}}
[7] struct
  :field -> [8] {"label":"__tag"}
  :field -> [9] {"label":"payload"}
[8] lit {"value":{"type":"Atom","value":"nil"}}
[9] lit {"value":{"type":"unit"}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = cons
      let v1 = 1
      let v2 = nil
      let v3 = unit
      let v4 = alloc { __tag: v2, payload: v3 }
      let v5 = alloc { 0: v1, 1: v4 }
      let v6 = alloc { __tag: v0, payload: v5 }
      return v6",
    "name": "listOf1",
    "normalized": "Struct
  [ __tag: cons,
    payload: Struct [ 0: 1, 1: Struct [ __tag: nil, payload: unit ] ] ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "(List) Num",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = strmap;
  const fnref2 = v0.__fn;
  const env3 = v0.__env;
  const v4 = fnref2(env3, v1);
  const v5 = "Num";
  const fnref6 = v4.__fn;
  const env7 = v4.__env;
  const v8 = fnref6(env7, v5);
  const v9 = ListFunctor;
  const fnref10 = v8.__fn;
  const env11 = v8.__env;
  const v12 = fnref10(env11, v9);
  const v13 = listOf1;
  const fnref14 = v12.__fn;
  const env15 = v12.__env;
  const v16 = fnref14(env15, v13);
  return v16;
}
return main();
",
    "elaborated": "strmap @(List) @Num @ListFunctor listOf1",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"strList"}
[3] app {"icit":"Explicit"}
  :arg -> [34]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [32]
  :func -> [5]
[5] app {"icit":"Implicit"}
  :arg -> [30]
  :func -> [6]
[6] app {"icit":"Implicit"}
  :arg -> [9]
  :func -> [8]
[7] var:free {"name":"strmap"}
[8] var:ref {"name":"strmap"}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
[9] mu {"variable":"x","source":"List","level":1}
  :annotation -> [10]
  :body -> [13]
[10] pi {"variable":"t2","icit":"Explicit","level":1}
  :annotation -> [11]
  :body -> [12]
[11] lit {"value":{"type":"Atom","value":"Type"}}
[12] lit {"value":{"type":"Atom","value":"Type"}}
[13] lambda {"variable":"a","icit":"Explicit","level":2}
  :annotation -> [14]
  :body -> [15]
  :env -> [35]
[14] lit {"value":{"type":"Atom","value":"Type"}}
[15] app {"icit":"Explicit"}
  :arg -> [17]
  :func -> [16]
[16] lit {"value":{"type":"Atom","value":"Variant"}}
[17] row:ext {"label":"cons"}
  :rest -> [27]
  :value -> [18]
[18] app {"icit":"Explicit"}
  :arg -> [20]
  :func -> [19]
[19] lit {"value":{"type":"Atom","value":"Schema"}}
[20] row:ext {"label":"1"}
  :rest -> [24]
  :value -> [21]
[21] app {"icit":"Explicit"}
  :arg -> [23]
  :func -> [22]
[22] var:bound {"index":1}
  :refers_to -> [9]
  :scope -> [2] {"level":0}
  :scope -> [9] {"level":1}
  :scope -> [13] {"level":2}
[23] var:bound {"index":0}
  :refers_to -> [13]
  :scope -> [2] {"level":0}
  :scope -> [9] {"level":1}
  :scope -> [13] {"level":2}
[24] row:ext {"label":"0"}
  :rest -> [26]
  :value -> [25]
[25] var:bound {"index":0}
  :refers_to -> [13]
  :scope -> [2] {"level":0}
  :scope -> [9] {"level":1}
  :scope -> [13] {"level":2}
[26] row:empty
[27] row:ext {"label":"nil"}
  :rest -> [29]
  :value -> [28]
[28] lit {"value":{"type":"Atom","value":"Unit"}}
[29] row:empty
[30] lit {"value":{"type":"Atom","value":"Num"}}
[31] var:free {"name":"ListFunctor"}
[32] var:ref {"name":"ListFunctor"}
  :refers_to -> [31]
  :scope -> [2] {"level":0}
[33] var:free {"name":"listOf1"}
[34] var:ref {"name":"listOf1"}
  :refers_to -> [33]
  :scope -> [2] {"level":0}
[35] env
  :capture -> [9] {"index":0}
[36] closure
  :body -> [13]
  :env -> [35]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = strmap
      let fnref2 = read v0.__fn
      let env3 = read v0.__env
      let v4 = call *fnref2(env3, v1)
      let v5 = Num
      let fnref6 = read v4.__fn
      let env7 = read v4.__env
      let v8 = call *fnref6(env7, v5)
      let v9 = ListFunctor
      let fnref10 = read v8.__fn
      let env11 = read v8.__env
      let v12 = call *fnref10(env11, v9)
      let v13 = listOf1
      let fnref14 = read v12.__fn
      let env15 = read v12.__env
      let v16 = call *fnref14(env15, v13)
      return v16",
    "name": "strList",
    "normalized": "Struct
  [ __tag: cons,
    payload: Struct
      [ 0: (stringify: (Num) (1)), 1: Struct [ __tag: nil, payload: unit ] ] ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "(List) String",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Higher-Kinded Polymorphism > functor 1`] = `
[
  {
    "codegenJS": "function main() {
  return v0;
}
return main();
",
    "elaborated": "List",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"List"}
[3] mu {"variable":"x","source":"List","level":1}
  :annotation -> [4]
  :body -> [7]
[4] pi {"variable":"t1","icit":"Explicit","level":1}
  :annotation -> [5]
  :body -> [6]
[5] lit {"value":{"type":"Atom","value":"Type"}}
[6] lit {"value":{"type":"Atom","value":"Type"}}
[7] lambda {"variable":"a","icit":"Explicit","level":2}
  :annotation -> [8]
  :body -> [9]
  :env -> [24]
[8] lit {"value":{"type":"Atom","value":"Type"}}
[9] app {"icit":"Explicit"}
  :arg -> [11]
  :func -> [10]
[10] lit {"value":{"type":"Atom","value":"Variant"}}
[11] row:ext {"label":"cons"}
  :rest -> [21]
  :value -> [12]
[12] app {"icit":"Explicit"}
  :arg -> [14]
  :func -> [13]
[13] lit {"value":{"type":"Atom","value":"Schema"}}
[14] row:ext {"label":"1"}
  :rest -> [18]
  :value -> [15]
[15] app {"icit":"Explicit"}
  :arg -> [17]
  :func -> [16]
[16] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[17] var:bound {"index":0}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[18] row:ext {"label":"0"}
  :rest -> [20]
  :value -> [19]
[19] var:bound {"index":0}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[20] row:empty
[21] row:ext {"label":"nil"}
  :rest -> [23]
  :value -> [22]
[22] lit {"value":{"type":"Atom","value":"Unit"}}
[23] row:empty
[24] env
  :capture -> [3] {"index":0}
[25] closure
  :body -> [7]
  :env -> [24]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      return v0",
    "name": "List",
    "normalized": "List",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(t1: Type) -> Type",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const env_cls2 = {};
  const fnref_cls2 = closure_45;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_45(env0, f1) {
  const v0 = {};
  return v0;
}
return main();
",
    "elaborated": "λ(f: Π(t3: Type) -> Type) ->
  Σ($sig: [ map: Π(a: Type) =>
      Π(b: Type) => Π(t4: Π(t5: a) -> b) -> Π(t6: f a) -> f b ]) .
    Schema
      [ map: Π(a: Type) =>
          Π(b: Type) => Π(t4: Π(t5: a) -> b) -> Π(t6: f a) -> f b ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Functor"}
[3] lambda {"variable":"f","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [7]
  :env -> [44]
[4] pi {"variable":"t3","icit":"Explicit","level":1}
  :annotation -> [5]
  :body -> [6]
[5] lit {"value":{"type":"Atom","value":"Type"}}
[6] lit {"value":{"type":"Atom","value":"Type"}}
[7] sigma {"variable":"$sig","level":2}
  :annotation -> [8]
  :body -> [25]
[8] row:ext {"label":"map"}
  :rest -> [24]
  :value -> [9]
[9] pi {"variable":"a","icit":"Implicit","level":2}
  :annotation -> [10]
  :body -> [11]
[10] lit {"value":{"type":"Atom","value":"Type"}}
[11] pi {"variable":"b","icit":"Implicit","level":3}
  :annotation -> [12]
  :body -> [13]
[12] lit {"value":{"type":"Atom","value":"Type"}}
[13] pi {"variable":"t4","icit":"Explicit","level":4}
  :annotation -> [14]
  :body -> [17]
[14] pi {"variable":"t5","icit":"Explicit","level":4}
  :annotation -> [15]
  :body -> [16]
[15] var:bound {"index":1}
  :refers_to -> [9]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [9] {"level":2}
  :scope -> [11] {"level":3}
[16] var:bound {"index":1}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [9] {"level":2}
  :scope -> [11] {"level":3}
  :scope -> [14] {"level":4}
[17] pi {"variable":"t6","icit":"Explicit","level":5}
  :annotation -> [18]
  :body -> [21]
[18] app {"icit":"Explicit"}
  :arg -> [20]
  :func -> [19]
[19] var:bound {"index":3}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [9] {"level":2}
  :scope -> [11] {"level":3}
  :scope -> [13] {"level":4}
[20] var:bound {"index":2}
  :refers_to -> [9]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [9] {"level":2}
  :scope -> [11] {"level":3}
  :scope -> [13] {"level":4}
[21] app {"icit":"Explicit"}
  :arg -> [23]
  :func -> [22]
[22] var:bound {"index":4}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [9] {"level":2}
  :scope -> [11] {"level":3}
  :scope -> [13] {"level":4}
  :scope -> [17] {"level":5}
[23] var:bound {"index":2}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [9] {"level":2}
  :scope -> [11] {"level":3}
  :scope -> [13] {"level":4}
  :scope -> [17] {"level":5}
[24] row:empty
[25] app {"icit":"Explicit"}
  :arg -> [27]
  :func -> [26]
[26] lit {"value":{"type":"Atom","value":"Schema"}}
[27] row:ext {"label":"map"}
  :rest -> [43]
  :value -> [28]
[28] pi {"variable":"a","icit":"Implicit","level":3}
  :annotation -> [29]
  :body -> [30]
[29] lit {"value":{"type":"Atom","value":"Type"}}
[30] pi {"variable":"b","icit":"Implicit","level":4}
  :annotation -> [31]
  :body -> [32]
[31] lit {"value":{"type":"Atom","value":"Type"}}
[32] pi {"variable":"t4","icit":"Explicit","level":5}
  :annotation -> [33]
  :body -> [36]
[33] pi {"variable":"t5","icit":"Explicit","level":5}
  :annotation -> [34]
  :body -> [35]
[34] var:bound {"index":1}
  :refers_to -> [28]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [28] {"level":3}
  :scope -> [30] {"level":4}
[35] var:bound {"index":1}
  :refers_to -> [30]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [28] {"level":3}
  :scope -> [30] {"level":4}
  :scope -> [33] {"level":5}
[36] pi {"variable":"t6","icit":"Explicit","level":6}
  :annotation -> [37]
  :body -> [40]
[37] app {"icit":"Explicit"}
  :arg -> [39]
  :func -> [38]
[38] var:bound {"index":3}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [28] {"level":3}
  :scope -> [30] {"level":4}
  :scope -> [32] {"level":5}
[39] var:bound {"index":2}
  :refers_to -> [28]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [28] {"level":3}
  :scope -> [30] {"level":4}
  :scope -> [32] {"level":5}
[40] app {"icit":"Explicit"}
  :arg -> [42]
  :func -> [41]
[41] var:bound {"index":4}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [28] {"level":3}
  :scope -> [30] {"level":4}
  :scope -> [32] {"level":5}
  :scope -> [36] {"level":6}
[42] var:bound {"index":2}
  :refers_to -> [30]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [28] {"level":3}
  :scope -> [30] {"level":4}
  :scope -> [32] {"level":5}
  :scope -> [36] {"level":6}
[43] row:empty
[44] env
[45] closure
  :body -> [3]
  :env -> [44]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_45
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_45(env0, f1) entry=entry
    entry:
      let v0 = alloc {  }
      return v0",
    "name": "Functor",
    "normalized": "λ(f: Π(t3: Type) -> (closure: Type -| Γ: t3)) ->
  (closure: Σ($sig: [ map: Π(a: Type) =>
      Π(b: Type) => Π(t4: Π(t5: a) -> b) -> Π(t6: f a) -> f b ]) .
    Schema
      [ map: Π(a: Type) =>
          Π(b: Type) => Π(t4: Π(t5: a) -> b) -> Π(t6: f a) -> f b ] -| Γ: f)",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(t2: Π(t3: Type) -> Type) -> Type",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const env_cls2 = {
    v0: mapList
  };
  const fnref_cls2 = closure_79;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_82(env0, list1) {
  let __block = "entry";
  while (true) {
    switch (__block) {
      case "entry": {
        const cap_0 = env0.v0;
        const cap_1 = env0.v1;
        const cap_2 = env0.v2;
        const cap_3 = env0.v3;
        (__block = "sw2");
        break;
      }
      case "sw2": {
        const tag0 = list1.__tag;
        if ((String(tag0) === "nil")) {
          (__block = "case4");
          break;
        }
        if ((String(tag0) === "cons")) {
          (__block = "case5");
          break;
        }
      }
      case "case4": {
        const v5 = "nil";
        const v6 = null;
        const v7 = {
          __tag: v5,
          payload: v6
        };
        const match1 = v7;
        (__block = "join3");
        break;
      }
      case "case5": {
        const v6 = list1.payload;
        const v7 = v6 .0;
        const x = v7;
        const v8 = v6 .1;
        const xs = v8;
        const v9 = "cons";
        const fnref10 = cap_0.__fn;
        const env11 = cap_0.__env;
        const v12 = fnref10(env11, x);
        const fnref13 = cap_1.__fn;
        const env14 = cap_1.__env;
        const v15 = fnref13(env14, cap_2);
        const fnref16 = v15.__fn;
        const env17 = v15.__env;
        const v18 = fnref16(env17, cap_3);
        const fnref19 = v18.__fn;
        const env20 = v18.__env;
        const v21 = fnref19(env20, cap_0);
        const fnref22 = v21.__fn;
        const env23 = v21.__env;
        const v24 = fnref22(env23, xs);
        const v25 = {
          0: v12,
          1: v24
        };
        const v26 = {
          __tag: v9,
          payload: v25
        };
        const match1 = v26;
        (__block = "join3");
        break;
      }
      case "join3": {
        return match1;
      }
    }
  }
}

function closure_81(env0, f1) {
  const cap_0 = env0.v0;
  const cap_1 = env0.v1;
  const cap_2 = env0.v2;
  const env_cls2 = {
    v0: f1,
    v1: cap_1,
    v2: cap_0,
    v3: cap_2
  };
  const fnref_cls2 = closure_82;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_80(env0, b1) {
  const cap_0 = env0.v0;
  const cap_1 = env0.v1;
  const env_cls2 = {
    v0: cap_0,
    v1: cap_1,
    v2: b1
  };
  const fnref_cls2 = closure_81;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_79(env0, a1) {
  const cap_0 = env0.v0;
  const env_cls2 = {
    v0: a1,
    v1: cap_0
  };
  const fnref_cls2 = closure_80;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}
return main();
",
    "elaborated": "λ(a: Type) =>
  λ(b: Type) =>
    λ(f: Π(t8: a) -> b) ->
      λ(list: (List) a) ->
        match list
          | Variant [ nil: _ | $row_8 ] -> Struct [ __tag: nil, payload: unit ]
          | Variant [ cons: Struct [ 0: x, 1: xs | $row_14 ] | $row_15 ] ->
              Struct
                [ __tag: cons, payload: Struct [ 0: f x, 1: I8 @a @b f xs ] ]",
    "error": "Cannot read properties of undefined (reading 'type'); Cannot read properties of undefined (reading 'type'); Cannot read properties of undefined (reading 'type')",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"mapList"}
[3] lambda {"variable":"a","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [74]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] lambda {"variable":"b","icit":"Implicit","level":2}
  :annotation -> [6]
  :body -> [7]
  :env -> [75]
[6] lit {"value":{"type":"Atom","value":"Type"}}
[7] lambda {"variable":"f","icit":"Explicit","level":3}
  :annotation -> [8]
  :body -> [11]
  :env -> [76]
[8] pi {"variable":"t8","icit":"Explicit","level":3}
  :annotation -> [9]
  :body -> [10]
[9] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[10] var:bound {"index":1}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [8] {"level":3}
[11] lambda {"variable":"list","icit":"Explicit","level":4}
  :annotation -> [12]
  :body -> [35]
  :env -> [77]
[12] app {"icit":"Explicit"}
  :arg -> [34]
  :func -> [13]
[13] mu {"variable":"x","source":"List","level":4}
  :annotation -> [14]
  :body -> [17]
[14] pi {"variable":"t1","icit":"Explicit","level":4}
  :annotation -> [15]
  :body -> [16]
[15] lit {"value":{"type":"Atom","value":"Type"}}
[16] lit {"value":{"type":"Atom","value":"Type"}}
[17] lambda {"variable":"a","icit":"Explicit","level":5}
  :annotation -> [18]
  :body -> [19]
  :env -> [78]
[18] lit {"value":{"type":"Atom","value":"Type"}}
[19] app {"icit":"Explicit"}
  :arg -> [21]
  :func -> [20]
[20] lit {"value":{"type":"Atom","value":"Variant"}}
[21] row:ext {"label":"cons"}
  :rest -> [31]
  :value -> [22]
[22] app {"icit":"Explicit"}
  :arg -> [24]
  :func -> [23]
[23] lit {"value":{"type":"Atom","value":"Schema"}}
[24] row:ext {"label":"1"}
  :rest -> [28]
  :value -> [25]
[25] app {"icit":"Explicit"}
  :arg -> [27]
  :func -> [26]
[26] var:bound {"index":1}
  :refers_to -> [13]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [13] {"level":4}
  :scope -> [17] {"level":5}
[27] var:bound {"index":0}
  :refers_to -> [17]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [13] {"level":4}
  :scope -> [17] {"level":5}
[28] row:ext {"label":"0"}
  :rest -> [30]
  :value -> [29]
[29] var:bound {"index":0}
  :refers_to -> [17]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [13] {"level":4}
  :scope -> [17] {"level":5}
[30] row:empty
[31] row:ext {"label":"nil"}
  :rest -> [33]
  :value -> [32]
[32] lit {"value":{"type":"Atom","value":"Unit"}}
[33] row:empty
[34] var:bound {"index":2}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
[35] match
  :alt -> [37] {"index":0}
  :alt -> [44] {"index":1}
  :decision_tree -> [66]
  :scrutinee -> [36]
[36] var:bound {"index":0}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [11] {"level":4}
[37] case
  :body -> [41]
  :next -> [44]
  :pattern -> [38]
[38] pat:variant {"label":"nil"}
  :payload -> [39]
[39] pat:wildcard
[40] pat:wildcard
[41] struct
  :field -> [42] {"label":"__tag"}
  :field -> [43] {"label":"payload"}
[42] lit {"value":{"type":"Atom","value":"nil"}}
[43] lit {"value":{"type":"unit"}}
[44] case
  :body -> [51]
  :pattern -> [45]
[45] pat:variant {"label":"cons"}
  :payload -> [46]
[46] pat:struct
  :field -> [47] {"label":"0"}
  :field -> [48] {"label":"1"}
[47] pat:binder {"name":"x","level":5}
[48] pat:binder {"name":"xs","level":6}
[49] pat:wildcard
[50] pat:wildcard
[51] struct
  :field -> [52] {"label":"__tag"}
  :field -> [53] {"label":"payload"}
[52] lit {"value":{"type":"Atom","value":"cons"}}
[53] struct
  :field -> [54] {"label":"0"}
  :field -> [57] {"label":"1"}
[54] app {"icit":"Explicit"}
  :arg -> [56]
  :func -> [55]
[55] var:bound {"index":5}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [11] {"level":4}
  :scope -> [47] {"level":5}
  :scope -> [48] {"level":6}
  :scope -> [49] {"level":7}
  :scope -> [50] {"level":8}
[56] var:bound {"index":3}
  :refers_to -> [47]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [11] {"level":4}
  :scope -> [47] {"level":5}
  :scope -> [48] {"level":6}
  :scope -> [49] {"level":7}
  :scope -> [50] {"level":8}
[57] app {"icit":"Explicit"}
  :arg -> [65]
  :func -> [58]
[58] app {"icit":"Explicit"}
  :arg -> [64]
  :func -> [59]
[59] app {"icit":"Implicit"}
  :arg -> [63]
  :func -> [60]
[60] app {"icit":"Implicit"}
  :arg -> [62]
  :func -> [61]
[61] var:bound {"index":8}
  :refers_to -> [2]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [11] {"level":4}
  :scope -> [47] {"level":5}
  :scope -> [48] {"level":6}
  :scope -> [49] {"level":7}
  :scope -> [50] {"level":8}
[62] var:bound {"index":7}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [11] {"level":4}
  :scope -> [47] {"level":5}
  :scope -> [48] {"level":6}
  :scope -> [49] {"level":7}
  :scope -> [50] {"level":8}
[63] var:bound {"index":6}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [11] {"level":4}
  :scope -> [47] {"level":5}
  :scope -> [48] {"level":6}
  :scope -> [49] {"level":7}
  :scope -> [50] {"level":8}
[64] var:bound {"index":5}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [11] {"level":4}
  :scope -> [47] {"level":5}
  :scope -> [48] {"level":6}
  :scope -> [49] {"level":7}
  :scope -> [50] {"level":8}
[65] var:bound {"index":2}
  :refers_to -> [48]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [11] {"level":4}
  :scope -> [47] {"level":5}
  :scope -> [48] {"level":6}
  :scope -> [49] {"level":7}
  :scope -> [50] {"level":8}
[66] switch {"kind":"tag"}
  :branch -> [68] {"label":"nil"}
  :branch -> [70] {"label":"cons"}
  :inspect -> [36]
[67] proj {"label":"payload"}
  :target -> [36]
[68] leaf
  :body -> [41]
[69] proj {"label":"payload"}
  :target -> [36]
[70] switch {"kind":"struct"}
  :branch -> [73]
  :inspect -> [69]
[71] proj {"label":"0"}
  :target -> [69]
[72] proj {"label":"1"}
  :target -> [69]
[73] leaf
  :bind -> [71] {"name":"x","binder":47}
  :bind -> [72] {"name":"xs","binder":48}
  :body -> [51]
[74] env
  :capture -> [2] {"index":0}
[75] env
  :capture -> [3] {"index":0}
  :capture -> [2] {"index":1}
[76] env
  :capture -> [3] {"index":0}
  :capture -> [2] {"index":1}
  :capture -> [5] {"index":2}
[77] env
  :capture -> [7] {"index":0}
  :capture -> [2] {"index":1}
  :capture -> [3] {"index":2}
  :capture -> [5] {"index":3}
[78] env
  :capture -> [13] {"index":0}
[79] closure
  :body -> [3]
  :env -> [74]
[80] closure
  :body -> [5]
  :env -> [75]
[81] closure
  :body -> [7]
  :env -> [76]
[82] closure
  :body -> [11]
  :env -> [77]
[83] closure
  :body -> [17]
  :env -> [78]",
    "ivl": "",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc { v0: mapList }
      let fnref_cls2 = &closure_79
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_82(env0, list1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let cap_1 = read env0.v1
      let cap_2 = read env0.v2
      let cap_3 = read env0.v3
      jump sw2
    sw2:
      let tag0 = read list1.__tag
      branch tag0 { nil -> case4 | cons -> case5 }
    case4:
      let v5 = nil
      let v6 = unit
      let v7 = alloc { __tag: v5, payload: v6 }
      let match1 = v7
      jump join3
    case5:
      let v6 = read list1.payload
      let v7 = read v6.0
      let x = v7
      let v8 = read v6.1
      let xs = v8
      let v9 = cons
      let fnref10 = read cap_0.__fn
      let env11 = read cap_0.__env
      let v12 = call *fnref10(env11, x)
      let fnref13 = read cap_1.__fn
      let env14 = read cap_1.__env
      let v15 = call *fnref13(env14, cap_2)
      let fnref16 = read v15.__fn
      let env17 = read v15.__env
      let v18 = call *fnref16(env17, cap_3)
      let fnref19 = read v18.__fn
      let env20 = read v18.__env
      let v21 = call *fnref19(env20, cap_0)
      let fnref22 = read v21.__fn
      let env23 = read v21.__env
      let v24 = call *fnref22(env23, xs)
      let v25 = alloc { 0: v12, 1: v24 }
      let v26 = alloc { __tag: v9, payload: v25 }
      let match1 = v26
      jump join3
    join3:
      return match1
  fn closure_81(env0, f1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let cap_1 = read env0.v1
      let cap_2 = read env0.v2
      let env_cls2 = alloc { v0: f1, v1: cap_1, v2: cap_0, v3: cap_2 }
      let fnref_cls2 = &closure_82
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_80(env0, b1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let cap_1 = read env0.v1
      let env_cls2 = alloc { v0: cap_0, v1: cap_1, v2: b1 }
      let fnref_cls2 = &closure_81
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_79(env0, a1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let env_cls2 = alloc { v0: a1, v1: cap_0 }
      let fnref_cls2 = &closure_80
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2",
    "name": "mapList",
    "normalized": "λ(a: Type) =>
  (closure: λ(b: Type) =>
    λ(f: Π(t8: a) -> b) ->
      λ(list: (List) a) ->
        match list
          | Variant [ nil: _ | $row_8 ] -> Struct [ __tag: nil, payload: unit ]
          | Variant [ cons: Struct [ 0: x, 1: xs | $row_14 ] | $row_15 ] ->
              Struct
                [ __tag: cons,
                  payload: Struct [ 0: f x, 1: I8 @a @b f xs ] ] -| Γ: a)",
    "solverTrace": "",
    "type": "Π(a: Type) => Π(b: Type) => Π(t7: Π(t8: a) -> b) -> Π(t9: (List) a) -> (List) b",
    "validity": "",
  },
  {
    "codegenJS": "function main() {
  const v0 = mapList;
  const v1 = {
    map: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ map: λ(a: Type) => λ(b: Type) => mapList @a @b ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"ListFunctor"}
[3] struct
  :field -> [11] {"label":"map"}
[5] lit {"value":{"type":"Atom","value":"Type"}}
[7] lit {"value":{"type":"Atom","value":"Type"}}
[10] var:free {"name":"mapList"}
[11] var:ref {"name":"mapList"}
  :refers_to -> [10]
  :scope -> [2] {"level":0}
  :scope -> [11] {"level":1}",
    "ivl": "(forall ((a Type)) (forall ((b Type)) (and (= a a) (= b b))))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = mapList
      let v1 = alloc { map: v0 }
      return v1",
    "name": "ListFunctor",
    "normalized": "Struct [ map: λ(a: Type) => (closure: λ(b: Type) => mapList @a @b -| Γ: a) ]",
    "solverTrace": "=== Formula ===
  (forall ((a Type)) (forall ((b Type)) (and (= a a) (= b b))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  a=a -> residual
  a=b -> residual
  b=a -> residual
  b=b -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Σ($sig: [ map: Π(a: Type) =>
    Π(b: Type) => Π(t4: Π(t5: a) -> b) -> Π(t6: (List) a) -> (List) b ]) .
  Schema
    [ map: Π(a: Type) =>
        Π(b: Type) => Π(t4: Π(t5: a) -> b) -> Π(t6: (List) a) -> (List) b ]",
    "validity": "valid",
  },
]
`;
